changes in html and ts files

--- a/VlimsApp/ClientApp/src/app/modules/authentication/components/Department/add-department.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/authentication/components/Department/add-department.component.html
@@ -51,7 +51,7 @@
                         id="Comments"
                         name="Comments"
                         rows="3"
-                        placeholder="Comments"
+                        placeholder="Comments please"
                         [(ngModel)]="newdept.Comments" [disabled]="viewMode"
                         required
            #CommentsInput="ngModel"></textarea>
