--- a/VlimsApp/ClientApp/src/app/modules/documents/components/add-document-type/add-document-type.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/documents/components/add-document-type/add-document-type.component.html
@@ -33,7 +33,7 @@
                      class="form-control"
                      id="prefix"
                      name="prefix"
-                     placeholder=""
+                     placeholder="Enter Prefix Name"
                      [(ngModel)]="documentType.documenttypeprefix" [disabled]="viewMode"
                      required
                      #prefixInput="ngModel"
