--- a/VlimsApp/ClientApp/src/app/modules/documents/components/add-workflow/add-workflow.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/documents/components/add-workflow/add-workflow.component.html
@@ -18,7 +18,7 @@
                 class="form-control"
                 id="workflowName"
                 name="workflowName"
-                placeholder="Workflow workflowName"
+                placeholder="Enter workflow Name"
                 [(ngModel)]="workflow.workflowName"
                 required
                 #workflowNameInput="ngModel"
@@ -74,7 +74,7 @@
                 [options]="types"
                 [(ngModel)]="workflow.documenttype"
                 optionLabel="Documenttypename"
-                placeholder="Select a Document Type"
+                placeholder="Enter Document Type"
                 optionValue="Documenttypename"
               >
                 
