--- a/VlimsApp/ClientApp/src/app/modules/authentication/components/Approval-Configuration/approval-configurations.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/authentication/components/Approval-Configuration/approval-configurations.component.html
@@ -9,11 +9,19 @@
     <div class="col">
       <form (ngSubmit)="addapprovalconfig(approvalconfig)" #fm="ngForm">
         <div class="p-4 bg-white shadow-dark rounded-2">
+          <h5 class="page-title">Document Type Configuration</h5>
           <div class="form-group row">
             <label for="documentType" class="col-sm-2 col-form-label">No Of Approvals</label>
             <div class="col-sm-10">
 
-              <select class="form-control" id="noofapprovals" name="noofapprovals" [(ngModel)]="approvalconfig.NoOfApprovals1" [disabled]="viewMode">
+              <select class="form-control" id="noofapprovals" name="noofapprovals" [(ngModel)]="approvalconfig.NoOfApprovals1" [disabled]="viewMode"
+              [required]="true"
+                       #noofapprovalsInput="ngModel"
+              
+              >
+              <div *ngIf="noofapprovalsInput.invalid && (noofapprovalsInput.dirty || noofapprovalsInput.touched)" class="text-danger">
+                Write Comments.
+              </div>
                 <option>1</option>
                 <option>2</option>
                 <option>3</option>
@@ -60,7 +68,7 @@
         <div class="form-group row my-4">
           <div class="col-sm-10 offset-sm-2">
             <button type="button" class="btn btn-outline-secondary mx-2" (click)="onCancel()">Cancel</button>
-            <button type="submit" class="btn btn-primary" *ngIf="!editMode">Submit</button>
+            <button type="submit" class="btn btn-primary" *ngIf="!editMode" [disabled]="!fm.form.valid">Submit</button>
             <button type="submit" class="btn btn-primary" *ngIf="editMode">Update</button>
           </div>
         </div>
