--- a/VlimsApp/ClientApp/src/app/modules/documents/components/add-template/add-template.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/documents/components/add-template/add-template.component.html
@@ -21,24 +21,31 @@
                      #TemplatenameInput="ngModel"
                       />
                       <div *ngIf="TemplatenameInput.invalid && (TemplatenameInput.dirty || TemplatenameInput.touched)" class="text-danger">
-                        Enter Template Time.
+                        Enter Template name.
                       </div>
           </div>
         </div>
         <div class="form-group row">
-          <label for="prefix" class="col-sm-2 col-form-label">Unique Code</label>
+          <label for="ucode" class="col-sm-2 col-form-label">Unique Code <span style="color: red; font-weight: bolder;">*</span></label>
           <div class="col-sm-10">
             <input type="text"
                    class="form-control mw-350"
-                   id="prefix"
-                   name="prefix"
-                   placeholder="Prefix"
+                   id="ucode"
+                   name="ucode"
+                   placeholder="Enter Prefix"
                    [(ngModel)]="templateForm.Uniquecode"
-                   readonly />
+                   readonly     
+                   required
+                   #ucodeInput="ngModel"
+                   />
+                 
+          </div>
+          <div *ngIf="ucodeInput.invalid && (ucodeInput.dirty || ucodeInput.touched)" class="text-danger">
+            Enter unique code.
           </div>
         </div>
         <div class="form-group row">
-          <label for="docType" class="col-sm-2 col-form-label">Document Type</label>
+          <label for="docType" class="col-sm-2 col-form-label">Document Type <span style="color: red; font-weight: bolder;">*</span></label>
           <div class="col-sm-10">
             <p-dropdown [options]="typesDatasource" [(ngModel)]="selectedtype" placeholder="Select a Document Type"
                         optionLabel="Documenttypename"></p-dropdown>
@@ -197,3 +204,4 @@
     </div>
   </div>
 </div>
+
