--- a/VlimsApp/ClientApp/src/app/modules/manager/components/review-revision/review-revision.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/review-revision/review-revision.component.html
@@ -98,7 +98,7 @@
           </div>
 
 
-          <!-- <div class="form-group row">
+          <div class="form-group row">
             <label for="workflow" class="col-sm-2 col-form-label">Workflow<span
                 style="color: red; font-weight: bolder;">*</span></label>
             <div class="col-sm-10">
@@ -110,7 +110,7 @@
                 Workflow is required.
               </div>
             </div>
-          </div> -->
+          </div>
 
 
           <div class="form-group row my-4">
@@ -118,8 +118,9 @@
               <button type="button" class="btn btn-outline-secondary mx-2" (click)="onCancel()">
                 Cancel
               </button>
-              <button type="submit" class="btn btn-primary" *ngIf="!viewMode"
-                [disabled]="!fm.form.valid">Submit</button>
+              <!-- <button type="submit" class="btn btn-primary" *ngIf="!viewMode"
+                [disabled]="!fm.form.valid">Submit</button> -->
+                <button type="submit" class="col-xs-1 mx-2  btn btn-success"  [disabled]="!fm.form.valid">Revision</button>
                 <button type="button" class="col-xs-1 mx-2  btn btn-success" *ngIf="viewMode && !iscompleted" (click)="approve()">Approve</button>
             <button type="button" class="col-xs-1 mx-2 offset-sm-1 btn btn-primary" *ngIf="viewMode && !iscompleted" (click)="reinitiative()">Re-Initiative</button>
             <button type="button" class="col-xs-1 mx-2 offset-sm-1 btn btn-danger" *ngIf="viewMode && !iscompleted" (click)="reject()">Reject</button>
