--- a/VlimsApp/ClientApp/src/app/modules/manager/components/review-effective/review-effective.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/review-effective/review-effective.component.html
@@ -78,7 +78,7 @@
               </div>
             </div>
   
-            <div class="form-group row">
+            <!-- <div class="form-group row">
               <label for="workflow" class="col-sm-2 col-form-label"
                 >Workflow</label
               >
@@ -93,7 +93,7 @@
                 readonly
               />
               </div>
-            </div>
+            </div> -->
   
             <div class="form-group row">
               <label for="document" class="col-sm-2 col-form-label">Document</label>
