--- a/VlimsApp/ClientApp/src/app/modules/documents/components/document-types/document-types.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/documents/components/document-types/document-types.component.html
@@ -5,7 +5,7 @@
             <div class="d-flex justify-content-between align-items-center">
                 <h4 class="page-title flex-grow-1">Document Types</h4>
                 <div class="d-flex page-title-actions">
-                  <input type="text" class="form-control" placeholder="Search">
+                  <input type="text" class="form-control" pInputText type="text" (input)="templatesTable.filterGlobal($any($event.target)?.value, 'contains')"  placeholder="Search">
                   <button class="btn btn-primary mx-2" type="button" (click)="navigateToAddDocumentType()">Add</button>
                 </div>
               </div>
@@ -14,7 +14,9 @@
     <div class="row p-2">
         <div class="col">
             <div class="p-4 bg-white shadow-dark rounded-2">
-            <p-table [value]="types" tableStyleClass="table table-striped" [rows]="itemsPerPage"
+            <p-table #templatesTable [value]="types" 
+            [globalFilterFields]="['Documenttypename', 'documenttypeprefix', 'Description','ModifiedBy','Status']"
+            tableStyleClass="table table-striped" [rows]="itemsPerPage"
             [paginator]="true" [totalRecords]="types.length"
             [rowsPerPageOptions]="rowsPerPageOptions" [(first)]="currentPage">
                 <ng-template pTemplate="header">
@@ -39,7 +41,7 @@
             <td>{{doc?.ModifiedBy}}</td>
             <td>{{doc?.ModifiedDate | date}}</td>
                         <td><span class="status" [ngClass]="getStatusClass(doc['Status'])">{{doc.Status}} </span></td>
-                        <td class="text-center"><i *ngIf="doc?.status=='In-Progress'" (click)="editdoc(doc)" class="bi bi-pencil"></i></td>
+                        <td class="text-center"><i *ngIf="doc?.Status!='Approved'" (click)="editdoc(doc)" class="bi bi-pencil"></i></td>
                     </tr>
                 </ng-template>
             </p-table>
