--- a/VlimsApp/ClientApp/src/app/modules/authentication/components/Department/add-department.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/authentication/components/Department/add-department.component.html
@@ -18,7 +18,7 @@
                      id="departmentName"
                      name="departmentName"
                      placeholder="Department Name"
-                     [(ngModel)]="newdept.DepartmentName" [disabled]="viewMode"
+                     [(ngModel)]="newdept.DepartmentName" [disabled]="editMode"
                      required
                      #departmentNameInput="ngModel" />
            <!-- Show validation error message -->
@@ -70,7 +70,7 @@
           <div class="col-sm-10 offset-sm-2">
             <button type="button" class="btn btn-outline-secondary mx-2" (click)="onCancel()">Cancel</button>
             <button type="submit" class="btn btn-primary" *ngIf="!editMode" [disabled]="!fm.form.valid">Submit</button>
-            <button type="submit" class="btn btn-primary" *ngIf="editMode">Update</button>
+            <button type="submit" class="btn btn-primary" *ngIf="editMode" [disabled]="!fm.form.valid">Update</button>
           </div>
         </div>
 
