Set functional profile implementations

--- a/VlimsApp/ClientApp/src/app/modules/authentication/components/set-functional-profile/setfunctionalprofile.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/authentication/components/set-functional-profile/setfunctionalprofile.component.html
@@ -35,8 +35,7 @@
               >Security Management</label
             >
             <div class="col-sm-10">
-              <input
-                type="checkbox"
+              <input type="checkbox"
                 
                 id="securityMgmt"
                 name="securityMgmt"
@@ -133,7 +132,7 @@
                 id="setFunctionalprofile"
                 name="setFunctionalprofile"
                 placeholder=""
-                [(ngModel)]="profile.setFunctionalprofile" [disabled]="viewMode"
+                 [disabled]="viewMode"
                
               />
             </div>
