--- a/VlimsApp/ClientApp/src/app/modules/authentication/components/Roles/new-role.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/authentication/components/Roles/new-role.component.html
@@ -14,22 +14,23 @@
             <div class="col-sm-10">
               <input type="text"
                      class="form-control"
-                     id="roleid"
-                     name="roleid"
-                     placeholder=""
-                     [(ngModel)]="addrole.Role" [disabled]="viewMode"
+                     id="rolename"
+                     name="rolename"
+                     placeholder="Role Name"
+                     [(ngModel)]="addrole.Role" [disabled]="editMode"
                      required
-                     #roleidInput="ngModel"
+                     #rolenameInput="ngModel"
                      />
-                     <div *ngIf="roleidInput.invalid && (roleidInput.dirty || roleidInput.touched)" class="text-danger">
-                      Select Your Role.
+                     <div *ngIf="rolenameInput.invalid && (rolenameInput.dirty || rolenameInput.touched)" class="text-danger">
+                      Enter Role.
                     </div>
                      
                      
             </div>
           </div>
           <div class="form-group row">
-            <label for="DepartmentName" class="col-sm-2 col-form-label">Department</label>
+            <label for="DepartmentName" class="col-sm-2 col-form-label">
+              Department<span style="color: red; font-weight: bolder;">*</span></label>
             <div class="col-sm-10">
               <!-- <input type="text"
                      class="form-control"
@@ -56,18 +57,36 @@
             </div>
           </div>
 
-
-          <div class="form-group row">
-            <label for="comments" class="col-sm-2 col-form-label">Comments</label>
+          <!-- <div class="form-group row">
+            <label for="Comments" class="col-sm-2 col-form-label">Comments</label>
             <div class="col-sm-10">
-              <input type="text"
+              <textarea class="form-control"
+                        id="Comments"
+                        name="Comments"
+                        rows="3"
+                        placeholder="Comments please"
+                        [(ngModel)]="newdept.Comments" [disabled]="viewMode"
+                        required
+           #CommentsInput="ngModel"></textarea>
+    <div *ngIf="CommentsInput.invalid && (CommentsInput.dirty || CommentsInput.touched)" class="text-danger">
+      Comments is required.
+            </div>
+            </div>
+          </div> -->
+          <div class="form-group row">
+            <label for="comments" class="col-sm-2 col-form-label">Comments
+              <span style="color: red; font-weight: bolder;">*</span>
+            </label>
+            <div class="col-sm-10">
+              <textarea 
                      class="form-control"
                      id="comments"
                      name="comments"
-                     placeholder=""
+                     rows="3"
+                     placeholder="Comments please"
                      [(ngModel)]="addrole.Comments" [disabled]="viewMode"
                      required
-                     #commentsInput="ngModel" />
+                     #commentsInput="ngModel" ></textarea>
                      <div *ngIf="commentsInput.invalid && (commentsInput.dirty || commentsInput.touched)" class="text-danger">
                       Write Comments.
                     </div>
