--- a/VlimsApp/ClientApp/src/app/modules/authentication/components/Roles/roles.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/authentication/components/Roles/roles.component.html
@@ -5,7 +5,7 @@
       <div class="d-flex justify-content-between align-items-center">
         <h4 class="page-title flex-grow-1">Role Configuration</h4>
         <div class="d-flex page-title-actions">
-          <input type="text" class="form-control" placeholder="Search">
+          <input type="text" class="form-control" (input)="templatesTable.filterGlobal($any($event.target)?.value, 'contains')" placeholder="Search">
           <button class="btn btn-primary mx-2" type="button" (click)="navigateToAddRoles()"  >Add</button>
         </div>
       </div>
@@ -14,18 +14,21 @@
   <div class="row p-2">
     <div class="col">
       <div class="p-4 bg-white shadow-dark rounded-2">
-        <p-table [value]="types" tableStyleClass="table table-striped" [rows]="itemsPerPage"
+        <p-table #templatesTable [value]="types" 
+        [globalFilterFields]="['Role', 'Department', 'CreatedBy','ModifiedBy']"
+        tableStyleClass="table table-striped" [rows]="itemsPerPage"
             [paginator]="true" [totalRecords]="types.length"
             [rowsPerPageOptions]="rowsPerPageOptions" [(first)]="currentPage">
           <ng-template pTemplate="header">
             <tr>
               <th>#</th>             
-              <th pSortableColumn="Role Name" style="width:10%">Role Name <p-sortIcon field="Role Name"></p-sortIcon></th>
+              <th pSortableColumn="Role" style="width:10%">Role Name <p-sortIcon field="Role"></p-sortIcon></th>
               <th pSortableColumn="Department" style="width:15%">Department<p-sortIcon field="Department"></p-sortIcon></th>
               <th pSortableColumn="Comments" style="width:20%">Comments<p-sortIcon field="Comments"></p-sortIcon></th>
-              <th pSortableColumn="Registered By" style="width:200px">Registered By<p-sortIcon field="Registered By"></p-sortIcon></th>
-              <th pSortableColumn="Registered On" style="width:200px">Registered On <p-sortIcon field="Registered On"></p-sortIcon></th>              
-              <th pSortableColumn="Modify" style="width:200px">Modify<p-sortIcon field="Modify"></p-sortIcon></th>
+              <th pSortableColumn="CreatedBy" style="width:200px">Registered By<p-sortIcon field="CreatedBy"></p-sortIcon></th>
+              <th pSortableColumn="CreatedDate" style="width:200px">Registered On <p-sortIcon field="CreatedDate"></p-sortIcon></th>              
+              <th pSortableColumn="ModifiedBy" style="width:200px">Modify<p-sortIcon field="ModifiedBy"></p-sortIcon></th>
+              <th pSortableColumn="Status" style="width:200px">Status<p-sortIcon field="Status"></p-sortIcon></th>
               <th style="width:80px">Actions</th>
             </tr>
           </ng-template>
@@ -37,7 +40,8 @@
               <td>{{doc?.Comments}}</td>
               <td>{{doc?.CreatedBy}}</td>
               <td>{{doc?.CreatedDate}}</td>              
-              <td>{{doc?.ModifiedBy}}</td>              
+              <td>{{doc?.ModifiedBy}}</td>  
+              <td><span class="status" [ngClass]="getStatusClass('Active')">Active</span></td>            
               <td class="text-center" (click)="editdoc(doc)"><i class="bi bi-pencil"></i></td>
             </tr>
           </ng-template>
