--- a/VlimsApp/ClientApp/src/app/modules/authentication/components/Approval-Configuration/approval-configurations.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/authentication/components/Approval-Configuration/approval-configurations.component.html
@@ -7,14 +7,14 @@
   </div>
   <div class="row p-2">
     <div class="col">
-      <form (ngSubmit)="addapprovalconfig(approvalconfig)" #fm="ngForm">
+      <form (ngSubmit)="submit(approvalconfig)" #fm="ngForm">
         <div class="p-4 bg-white shadow-dark rounded-2">
           <h5 class="page-title">Document Type Configuration</h5>
           <div class="form-group row">
             <label for="documentType" class="col-sm-2 col-form-label">No Of Approvals</label>
             <div class="col-sm-10">
 
-              <select class="form-control" id="noofapprovals" name="noofapprovals" [(ngModel)]="approvalconfig.NoOfApprovals1" [disabled]="viewMode"
+              <select class="form-control" id="noofapprovals" name="noofapprovals" [(ngModel)]="approvalconfig.DocTypeNoOfApprovals" [disabled]="viewMode"
               [required]="true"
                        #noofapprovalsInput="ngModel"
               
@@ -36,7 +36,7 @@
           <div class="form-group row">
             <label for="prefix" class="col-sm-2 col-form-label">No Of Approvals</label>
             <div class="col-sm-10">
-              <select class="form-control" id="approval2" name="approval2" [(ngModel)]="approvalconfig.NoOfApprovals2" [disabled]="viewMode">
+              <select class="form-control" id="approval2" name="approval2" [(ngModel)]="approvalconfig.DocTempNoOfApprovals" [disabled]="viewMode">
                 <option>1</option>
                 <option>2</option>
                 <option>3</option>
@@ -50,7 +50,7 @@
           <div class="form-group row">
             <label for="prefix" class="col-sm-2 col-form-label">No Of Approvals</label>
             <div class="col-sm-10">
-              <select class="form-control" id="approval3" name="approval3" [(ngModel)]="approvalconfig.NoOfApprovals3" [disabled]="viewMode">
+              <select class="form-control" id="approval3" name="approval3" [(ngModel)]="approvalconfig.WFlowNoOfApprovals" [disabled]="viewMode">
                 <option>1</option>
                 <option>2</option>
                 <option>3</option>
