--- a/VlimsApp/ClientApp/src/app/modules/authentication/components/set-functional-profile/setfunctionalprofile.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/authentication/components/set-functional-profile/setfunctionalprofile.component.html
@@ -11,7 +11,35 @@
       <form (ngSubmit)="onSubmit(profile)"  #fm="ngForm">
       <div class="p-4 bg-white shadow-dark rounded-2">
         
-        
+        <div class="form-group row">
+          <label for="role" class="col-sm-2 col-form-label">Role <span style="color: red; font-weight: bolder;">*</span></label>
+          <div class="col-sm-10">
+
+            <div *ngIf="viewMode">
+              <p-multiSelect [options]="roleTypes" [(ngModel)]="selectedRoles" defaultLabel="Select a Role" name="Role" id="Role" optionLabel="Role" display="chip" [disabled]="viewMode">
+                <ng-template pTemplate="selectedItems" let-options>
+                  <ng-container *ngTemplateOutlet="customTemplate; context: {$implicit: options}"></ng-container>
+                </ng-template>
+              </p-multiSelect>
+              <ng-template #customTemplate let-options>
+                <div class="p-chips-container p-inputtext" *ngIf="roleTypes && roleTypes.length">
+                  <span class="p-chip p-highlight">{{ roleTypes[0].Role }}</span>
+                  <span *ngIf="roleTypes.length > 1" class="p-chip">+{{ roleTypes.length - 1 }}</span>
+                </div>
+              </ng-template>
+            </div>
+            <div *ngIf="!viewMode">
+              <p-multiSelect [options]="roleTypes" [(ngModel)]="selectedRoles" defaultLabel="Select a Role"
+                             name="Role" id="Role" optionLabel="Role"
+                             display="chip"   required
+                             #departmentInput="ngModel"  >
+                             <div *ngIf="departmentInput.invalid && (departmentInput.dirty || departmentInput.touched)" class="text-danger">
+                              Enter department.
+                             </div>      
+              </p-multiSelect>
+            </div>
+          </div>
+        </div>
         
           <div class="form-group row">
             <label for="profile" class="col-sm-2 col-form-label"
