--- a/VlimsApp/ClientApp/src/app/modules/authentication/components/User-configuration/user-configuration.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/authentication/components/User-configuration/user-configuration.component.html
@@ -5,7 +5,7 @@
       <div class="d-flex justify-content-between align-items-center">
         <h4 class="page-title flex-grow-1">User Configuration</h4>
         <div class="d-flex page-title-actions">
-          <input type="text" class="form-control" placeholder="Search">
+          <input type="text" class="form-control" (input)="templatesTable.filterGlobal($any($event.target)?.value, 'contains')" placeholder="Search">
           <button class="btn btn-primary mx-2" type="button" (click)="navigateToAddUser()">Add</button>
         </div>
       </div>
@@ -14,7 +14,9 @@
   <div class="row p-2">
     <div class="col">
       <div class="p-4 bg-white shadow-dark rounded-2">
-        <p-table [value]="types" tableStyleClass="table table-striped" [rows]="itemsPerPage"
+        <p-table #templatesTable [value]="types" 
+        [globalFilterFields]="['FirstName', 'LastName', 'UserID','Department','Empid','EmailId','ModifiedBy']"
+        tableStyleClass="table table-striped" [rows]="itemsPerPage"
             [paginator]="true" [totalRecords]="types.length"
             [rowsPerPageOptions]="rowsPerPageOptions" [(first)]="currentPage">
           <ng-template pTemplate="header">
@@ -22,11 +24,11 @@
               <th>S.No</th>              
               <th pSortableColumn="FirstName" style="width:10%">First Name <p-sortIcon field="FirstName"></p-sortIcon></th>
               <th pSortableColumn="LastName" style="width:15%">Last Name<p-sortIcon field="LastName"></p-sortIcon></th>
-              <th pSortableColumn="UserId" style="width:20%">UserId<p-sortIcon field="UserId"></p-sortIcon></th>
+              <th pSortableColumn="UserID" style="width:20%">UserId<p-sortIcon field="UserID"></p-sortIcon></th>
               <th pSortableColumn="Department" style="width:200px">Department<p-sortIcon field="Department"></p-sortIcon></th>
-              <th pSortableColumn="EmployeeId" style="width:200px">Employee Id<p-sortIcon field="EmployeeId"></p-sortIcon></th>
-              <th pSortableColumn="E-mail-Id" style="width:200px">E-mail Id<p-sortIcon field="E-mail-Id"></p-sortIcon></th>
-              <th pSortableColumn="Modify" style="width:200px">Modify <p-sortIcon field="Modify"></p-sortIcon></th>
+              <th pSortableColumn="Empid" style="width:200px">Employee Id<p-sortIcon field="Empid"></p-sortIcon></th>
+              <th pSortableColumn="EmailId" style="width:200px">E-mail Id<p-sortIcon field="EmailId"></p-sortIcon></th>
+              <th pSortableColumn="ModifiedBy" style="width:200px">Modify <p-sortIcon field="ModifiedBy"></p-sortIcon></th>
               <th pSortableColumn="Status" style="width:200px">Status <p-sortIcon field="Status"></p-sortIcon></th>
               <th pSortableColumn="Action" style="width:200px">Action <p-sortIcon field="Action"></p-sortIcon></th>
             </tr>
@@ -41,7 +43,7 @@
               <td>{{doc?.Empid}}</td>
               <td>{{doc?.EmailId}}</td>
               <td>{{doc?.ModifiedBy}}</td>
-              <td><span class="status" [ngClass]="getStatusClass(doc['Status'])">{{doc.Status}} </span></td>
+              <td><span class="status"  [ngClass]="getStatusClass(doc['Status'])">{{doc?.Status}} </span></td>
               <td class="text-center" (click)="editdoc(doc)"><i class="bi bi-pencil"></i></td>
             </tr>
           </ng-template>
