--- a/VlimsApp/ClientApp/src/app/modules/documents/components/templates/templates.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/documents/components/templates/templates.component.html
@@ -17,7 +17,7 @@
         <div class="col">
             <div class="p-4 bg-white shadow-dark rounded-2">
             <p-table #templatesTable [value]="types"
-            [globalFilterFields]="['templateName', 'uniqueCode', 'description','registeredBy', 'status']"
+            [globalFilterFields]="['Templatename', 'Uniquecode', 'description','CreatedBy', 'status']"
              tableStyleClass="table table-striped" [rows]="itemsPerPage"
             [paginator]="true" [totalRecords]="types.length"
             [rowsPerPageOptions]="rowsPerPageOptions" [(first)]="currentPage">
