--- a/VlimsApp/ClientApp/src/app/modules/documents/components/workflows/workflows.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/documents/components/workflows/workflows.component.html
@@ -16,7 +16,7 @@
         <div class="col">
             <div class="p-4 bg-white shadow-dark rounded-2">
             <p-table #workflowTable [value]="types"
-            [globalFilterFields]="['documentstage', 'documenttype', 'department','CreatedBy', 'Status','workflowName']"
+            [globalFilterFields]="['workflowName','documentstage', 'documenttype', 'department','CreatedBy', 'Status','workflowName']"
              tableStyleClass="table table-striped" [rows]="itemsPerPage"
             [paginator]="true" [totalRecords]="types.length"
             [rowsPerPageOptions]="rowsPerPageOptions" [(first)]="currentPage">
