--- a/VlimsApp/ClientApp/src/app/modules/authentication/components/Admin-Home/Admin-home.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/authentication/components/Admin-Home/Admin-home.component.html
@@ -81,5 +81,13 @@
         </div>
       </div>
     </div>
+    <div class="col col-lg-3">
+      <div class="card" (click)="navigateTo('activeuser')">
+        <div class="card-body">
+          <i class="fa fa-chart-line"></i>
+          <h5 class="card-title">Activate/De-Activate User</h5>
+        </div>
+      </div>
+    </div>
   </div>
   </div>
