--- a/VlimsApp/ClientApp/src/app/layout/header/header.component.html
+++ b/VlimsApp/ClientApp/src/app/layout/header/header.component.html
@@ -23,6 +23,7 @@
           </a>
             <ul id="dropdown-basic" *dropdownMenu class="dropdown-menu"
                 role="menu" aria-labelledby="button-basic">
+                <li role="menuitem"><a class="dropdown-item" (click)="change()">Change Password</a></li>
               <li role="menuitem"><a class="dropdown-item" (click)="logout()">Sign out</a></li>
             </ul>
           </div>
