--- a/VlimsApp/ClientApp/src/app/modules/authentication/components/login/login.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/authentication/components/login/login.component.html
@@ -16,6 +16,7 @@
 
       <div class="floating-label-group">
         <input
+        #usernameInput
           type="text"
           [(ngModel)]="username"
           id="username"
@@ -38,19 +39,19 @@
           autocomplete="off"         
           required
         />
-        <label class="floating-label">Password</label>
+        <!-- <label class="floating-label">Password</label> -->
       </div>
 
-      <div class="mb-2 f-pwd">
+      <!-- <div class="mb-2 f-pwd">
         <a class="fs-xs">Forgot password?</a>
-      </div>
+      </div> -->
 
       <div class="text-center mb-3">
         <button class="btn btn-primary w-100">Login</button>
       </div>
-      <div class="text-center mb-3 pt-4">
+      <!-- <div class="text-center mb-3 pt-4">
         Don't have an account? <a>Sign up</a>
-      </div>
+      </div> -->
     </form>
   </div>
 </div>
