--- a/VlimsApp/ClientApp/src/app/modules/manager/components/add-request/add-request.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/add-request/add-request.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
   <div class="row p-2">
     <div class="col">
-      <h4 class="page-title">{{editMode? 'Update': 'New' }} Document Request</h4>
+      <h4 class="page-title">{{editMode? 'modify': 'New' }} Document Request</h4>
     </div>
   </div>
   <div class="row p-2">
