--- a/VlimsApp/ClientApp/src/app/modules/manager/components/preparation/preparation.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/preparation/preparation.component.html
@@ -22,23 +22,29 @@
           <ng-template pTemplate="header">
             <tr>
               <th style="width: 60px">#</th>
+              <th pSortableColumn="documentno" style="width: 15%">
+                Document No<p-sortIcon field="documentno"></p-sortIcon>
+              </th>
 
-              <th pSortableColumn="reqCode" style="width: 20%">
+              <th pSortableColumn="reqCode" style="width: 10%">
                 Req Code<p-sortIcon field="reqCode"></p-sortIcon>
               </th>
-              <th pSortableColumn="documentType" style="width: 10%">
+              <th pSortableColumn="documenttitle" style="width: 15%">
+                Document Name<p-sortIcon field="documenttitle"></p-sortIcon>
+              </th>
+              <th pSortableColumn="documentType" style="width: 15%">
                 Document type <p-sortIcon field="documentType"></p-sortIcon>
               </th>
               <th pSortableColumn="department" style="width: 15%">
                 Department<p-sortIcon field="department"></p-sortIcon>
               </th>
 
-              <th pSortableColumn="assignedToGroup" style="width: 200px">
+              <th pSortableColumn="assignedToGroup" style="width: 100px">
                 Assigned to Group<p-sortIcon
                   field="assignedToGroup"
                 ></p-sortIcon>
               </th>
-              <th pSortableColumn="status" style="width: 200px">
+              <th pSortableColumn="status" style="width: 100px">
                 Status <p-sortIcon field="status"></p-sortIcon>
               </th>
               <th class="text-center" style="width: 80px">Actions</th>
@@ -47,7 +53,9 @@
           <ng-template pTemplate="body" let-docPreperation let-i="rowIndex">
             <tr>
               <td>{{ i + 1 }}</td>
+              <td>{{ docPreperation.documentno }}</td>
               <td>{{ docPreperation.dpnid }}</td>
+              <td>{{ docPreperation.documenttitle }}</td>
               <td>{{ docPreperation.documenttype }}</td>
               <td>{{ docPreperation.department }}</td>
               <td>{{ docPreperation.template }}</td>
